--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,7 +19,7 @@
             android:weightSum="10">
 
             <TextView
-                android:id="@+id/backPress"
+                android:id="@+id/background_image_view"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/white_back_arrow"
@@ -42,13 +42,26 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/userprofile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/user_profile"
+                android:layout_width="95dp"
+                android:layout_height="95dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="100dp"
-                android:src="@drawable/img" />
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="90dp"
+                android:src="@drawable/ic_userprofile"
+                app:civ_border_color="#efefef"
+                app:civ_border_width="2dp" />
+
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_baseline_photo_camera_24"
+                android:id="@+id/lytCameraPick"
+                android:layout_marginTop="-25dp"
+                android:layout_marginLeft="30dp"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -90,7 +103,7 @@
                                 android:layout_height="50dp"
                                 android:layout_margin="5dp"
                                 android:background="@drawable/white_border"
-                                android:paddingStart="90dp"
+                                android:paddingStart="120dp"
                                 android:paddingTop="10dp"
                                 android:text="##"
                                 android:textColor="@color/black"
@@ -121,7 +134,7 @@
                                 android:layout_height="50dp"
                                 android:layout_margin="5dp"
                                 android:background="@drawable/white_border"
-                                android:paddingStart="90dp"
+                                android:paddingStart="120dp"
                                 android:paddingTop="10dp"
                                 android:text="##"
                                 android:textColor="@color/black"
@@ -152,7 +165,7 @@
                                 android:layout_height="50dp"
                                 android:layout_margin="5dp"
                                 android:background="@drawable/white_border"
-                                android:paddingStart="90dp"
+                                android:paddingStart="120dp"
                                 android:paddingTop="10dp"
                                 android:text="##"
                                 android:textColor="@color/black"
